<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Weight(Kg)</string>
    <string name="height">Height (m)</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bmi">BMI</string>
    <string name="status">Status</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="error_input">Error Input</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="underweight">Underweight</string>
</resources>
